# dwp-assessment-rust

./: .dockerignore  .gitignore  Cargo.toml  README.md  container-tests.yaml  docker-compose.yaml
.github/workflows/: build.yml
openapi-specification/: .spectral.js  openapi-specification.yml
wiremock/mappings/: mappings.json
